[package]
name = "tokio-retry2"
version = "0.4.0"
authors = ["Julia Naomi <jnboeira@outlook.com>","Sam Rijs <srijs@airpost.net>"]
description = "Extensible, asynchronous retry behaviours for futures/tokio"
license = "MIT"
readme = "README.md"
repository = "https://github.com/naomijub/tokio-retry"
documentation = "https://docs.rs/tokio-retry2"
keywords = ["tokio", "retry", "backoff"]
edition = "2021"

[features]
jitter = ["rand"]

[dependencies]
rand = { version = "0.8.5", optional = true }
tokio = { version = "1.40", features = ["time"] }
pin-project = "1.1.5"

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = 2 }
style = { level = "deny", priority = 0 }
complexity = { level = "warn", priority = 3 }
perf = { level = "deny", priority = 1 }